--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,7 +2,7 @@ fastapi
 uvicorn[standard]
 pillow
 transformers
-torch==2.4.0+cu121 ; platform_system=="Linux"
+torch>=2.5.0 ; platform_system=="Linux"
 huggingface_hub
 # ColPali (install from git)
 git+https://github.com/illuin-tech/colpali.git@main
